Fixed overflow:hidden issue.

--- a/modules/org.opencms.editors.ade/resources/system/workplace/resources/editors/ade/css/advanced_direct_edit.css
+++ b/modules/org.opencms.editors.ade/resources/system/workplace/resources/editors/ade/css/advanced_direct_edit.css
@@ -430,13 +430,14 @@ div.cms-handle a {
 	height: 22px;
 	width: 22px;
 	display: block;
-	float: left;
+	float: right;
 }
 
+/*
 div.cms-handle-reverse a {
 	float: right !important;
 }
-
+*/
 div.ui-widget-header a.ui-corner-all {
 	background-color: #eeeeee;
 }
